# WChat

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Dockerfile.ci  Makefile  README.md  bitbucket-pipelines.yml  makefile  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  client copy.cpp  client.cpp  server.cpp
src/client/cpp/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  WebSocketWorker.cpp  WebSocketWorker.h  client.cpp
src/client/cpp/ServerApi/: ProtoDecoder.cpp  ProtoDecoder.h  ProtoWrapper.cpp  ProtoWrapper.h
src/client/cpp/internal/: CUI.cpp  CUI.h  ClientConfig.h  CommandsExcutor.cpp  CommandsExcutor.h  Message.cpp  Message.h
src/client/cpp/internal/CommandsExcutor/: RegisterSession.cpp  RegisterSession.h  SendMsg.cpp  SendMsg.h
src/client/cpp/server/: MessagesReceiver.cpp  MessagesReceiver.h
src/client/cpp/server/api/: ProtoDecoder.cpp  ProtoDecoder.h  ProtoWrapper.cpp  ProtoWrapper.h
src/client/cpp/server/connection/: MessagesReceiver.cpp  MessagesReceiver.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  WebSocketWorker.cpp  WebSocketWorker.h
src/client/html/: index.html
src/client/html/common/: wsClient.js
src/server/: server.cpp
src/server/client/: ChatClient.cpp  ChatClient.h  ChatClientDatabase.cpp  ChatClientDatabase.h
src/server/core/: Config.cpp  Config.h  ConfigChoice.cpp  ConfigChoice.h  ConfigParameter.cpp  ConfigParameter.h  ServerConfig.cpp  ServerConfig.h
src/server/core/storage/: Storage.cpp  Storage.h  StorageFactory.cpp  StorageFactory.h
src/server/core/storage/db/: Volatile.cpp  Volatile.h
src/server/core/storage/db/sqlite/: SQLightWrapper.cpp  SQLightWrapper.h
src/server/errors/: ClientException.cpp  ClientException.h  ErrorHandlers.cpp  ErrorHandlers.h
src/server/messages/: Manager.cpp  Manager.h  MessageHandler.cpp  MessageHandler.h  MessageHandler_Message.cpp  MessageHandler_Message.h  MessageHandler_RegisterClient.cpp  MessageHandler_RegisterClient.h  MessageHandler_UnregisterClient.cpp  MessageHandler_UnregisterClient.h  MessageManager.cpp  MessageManager.h
src/server/messages/handlers/: ConnectionReq.cpp  ConnectionReq.h  ConnectionRes.cpp  ConnectionRes.h  Handler.cpp  Handler.h  ListContactReq.cpp  ListContactReq.h  Message.cpp  Message.h  MessageHandler.cpp  MessageHandler.h  MessageHandler_Message.cpp  MessageHandler_Message.h  MessageHandler_RegisterClient.cpp  MessageHandler_RegisterClient.h  MessageHandler_UnregisterClient.cpp  MessageHandler_UnregisterClient.h  RegisterClient.cpp  RegisterClient.h  RegisterClientSession.cpp  RegisterClientSession.h  UnregisterClient.cpp  UnregisterClient.h  UnregisterClientSession.cpp  UnregisterClientSession.h
src/server/proto/: messeges.proto
src/serwer/: ChatClient.cpp  ChatClient.h  ChatClientDatabase.cpp  ChatClientDatabase.h  ErrorHandlers.cpp  ErrorHandlers.h  server.cpp
src/serwer/messages/: MessageHandler.cpp  MessageHandler.h  MessageHandler_Message.cpp  MessageHandler_Message.h  MessageHandler_RegisterClient.cpp  MessageHandler_RegisterClient.h  MessageHandler_UnregisterClient.cpp  MessageHandler_UnregisterClient.h  MessageManager.cpp  MessageManager.h
src/serwer/proto/: messeges.proto
test/app/: WChatServer.conf  conftest.py  server_procedures.py  test_client_registration.py  test_messeges.py  test_websocket.py
test/app/common/: actions.py  conditions.py  constants.py  fixtures.py  utils.py
test/unit/: CMakeLists.txt  test_ChatClient.cpp  test_ChatClientDatabase.cpp  test_Config.cpp  test_ConfigParameter.cpp  test_main.cpp
tools/: cppcheck.suppress
